plugins/core/src/helping/snapshots/plugins_core__helping__tests__it_allows_editing_default_help.snap
---
source: plugins/core/src/helping/tests.rs
expression: effect.to_debug_json()?
---
{
  "reply": {
    "taggedJson": [
      "editorReply",
      {
        "editing": {
          "markdown": "# Hello, world!"
        },
        "key": "E-0",
        "save": {
          "saveHelpAction": {
            "copy": {
              "markdown": "!#$value"
            },
            "key": "E-0"
          }
        }
      }
    ]
  }
}
