plugins/core/src/helping/snapshots/plugins_core__helping__tests__it_allows_editing_help_by_name.snap
---
source: plugins/core/src/helping/tests.rs
expression: effect.to_debug_json()?
---
{
  "reply": {
    "taggedJson": [
      "editorReply",
      {
        "editing": {
          "markdown": "# Hello, world!"
        },
        "key": "E-3",
        "save": {
          "saveHelpAction": {
            "copy": {
              "markdown": "!#$value"
            },
            "key": "E-3"
          }
        }
      }
    ]
  }
}
