plugins/core/src/helping/snapshots/plugins_core__helping__tests__it_reads_default_help.snap
---
source: plugins/core/src/helping/tests.rs
expression: effect.to_debug_json()?
---
{
  "markdownReply": {
    "value": "# Hello, world!"
  }
}
