plugins/core/src/helping/snapshots/plugins_core__helping__tests__it_reads_help_by_name.snap
---
source: plugins/core/src/helping/tests.rs
expression: effect.to_debug_json()?
---
{
  "reply": {
    "taggedJson": {
      "simpleReply": "notFound"
    }
  }
}
